--- a/styles/SideNav/styles.css
+++ b/styles/SideNav/styles.css
@@ -1,5 +1,6 @@
 .container-sidenav {
-    width: 25rem;
+    width: 400px;
+    max-width: 400px;
     display: flex;
     flex-direction: column;
     gap: 1rem;
